Refactor various classes for improved readability and consistency in data handling